// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     expenses totalling 
    $235,123,409.87
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     expenses totalling 
    $2.35
  </h1>
</div>
`;
